# error-samurai

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: error-samurai-debugging.mdc
.cursor/skills/error-samurai-memory/: SKILL.md
core/: __init__.py  capture.py  context.py  fingerprints.py  ranking.py  search.py  solved.py  triviality.py
samurai/: __init__.py  cli.py  config.py  main.py
seed/: __init__.py  js_records.py  python_records.py  seed.py  web_records.py
storage/: __init__.py  context.py  db.py  incidents.py  memories.py
tests/: test_capture.py  test_config_paths_git.py  test_context.py  test_fingerprints.py  test_search.py  test_seed.py  test_solved.py  test_storage.py  test_triviality.py
utils/: git.py  paths.py
