[project]
name = "error-samurai"
version = "0.1.0"
description = "Local-first debugging memory layer for recurring errors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
samurai = "samurai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["samurai", "core", "storage", "utils", "seed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
